cannot place disconnected tile in board if not first turn, update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # ignore all file extensions
 *.*
 
+# ignore executable
+qwirkle
+
 # except source files, header files and markdown files
 !*.h
 !*.cpp
